--- a/react-query-starter/package.json
+++ b/react-query-starter/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "author": {
-    "name": "Hỏi Dân IT vs Eric",
-    "url": "https://hoidanit.com.vn"
+    "email": "vuvanthanhtb@gmail.com",
+    "name": "Vũ Văn Thanh"
   },
   "scripts": {
     "dev": "vite",
